fix dark mode highlight selected item

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -101,6 +101,10 @@
 		@apply border-y border-gray-200 dark:border-midnight-700;
 	}
 
+	.selected-item {
+		@apply bg-gray-200 dark:bg-midnight-700;
+	}
+
 	a {
 		@apply text-sm p-3 
 		text-slate-500 dark:text-midnight-400
